updates in livingroom, index and contact

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Gilt Bazaar Collection</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"</script>
-	<link rel="stylesheet" href="css/style.css">
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<header>
@@ -17,8 +17,8 @@
 	</header>
 	
 	<p id="welcome"> 
-		Welcome to Gilt Bazaar - the premiere virtual shopping place for aesthetically appealing, unique yet functional pieces for your home.<br>
-		We are pleased to share with you this well-chosen classical but modern collection.  The display will change periodically since most items are available in very limited numbers. Please be assured that you will get value for money since we source directly from manufacturers. <br>
+		<strong>Welcome to Gilt Bazaar<strong>, the premiere virtual shopping place for aesthetically appealing, unique yet functional pieces for your home.<br>
+		We are pleased to share with you this carefully selected classical but modern collection.  The display will change periodically since most items are available in very limited numbers. We aim to please by matching the collection with value for your money since we source directly from manufacturers. <br>
 		We hope you find what you are looking for. Enjoy browsing at your leisure and sharing our site with your friends!
 	</p>
 
