--- a/livingroom-products.html
+++ b/livingroom-products.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<title>Living Room Products</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css"</link>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"</script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<header>
@@ -18,13 +19,13 @@
 
 	<section id="featured-livingroom">
 	<ul>
-		<img src="../../livingroomproducts/chandelier.jpg" 
+		<img src="images/livingroomproducts/chandelier.jpg" 
 		<figcaption>Primavera 8 Lights Murano Glass Chandelier</figcaption>
 
-		<img sc="../livingroomproducts/elephants.jpg" 
+		<img sc="images/livingroomproducts/elephants.jpg" 
 		<figcaption>Venetian Murano Glass Elephants - Set of 2</figcaption>
 
-		<img src="../../livingroomproducts/fishsculpture.jpg"
+		<img src="images/livingroomproducts/fishsculpture.jpg"
 		<figcaption>Badioli totem Murano glass sculpture"</figcaption>
 	</ul> 
 </body>
