--- a/bathroom-products.html
+++ b/bathroom-products.html
@@ -13,6 +13,6 @@
 		<h1>For the BathRoom</h1>
 
 		<nav>
-			<a href="index.html">About</a> <a href="bathroom-products.html">BathRoom</a> <a href="contact.html"></a>
+			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
 		</nav>
 	</header>
