--- a/contact-page.html
+++ b/contact-page.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+  <nav>
+    <a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
+  </nav>
+
 
   <section>
         <!-- Contact Form -->
