--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>Gilt Bazaar</h1>
 
 		<nav>
-			<a href="index.html">About</a> <a href="contact.html">Contact Us</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Login/Register</a>
+			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
 		</nav>
 	</header>
 	
