--- a/login.html
+++ b/login.html
@@ -11,6 +11,10 @@
 <body>
 	<h3>Login</h3>
 
+	<nav>
+		<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
+	</nav>
+
 <form action="*.php" method="post">
 	<input type="text" name="username" placeholder="username" required>
 
