add index footer and js script src

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1>Gilt Bazaar</h1>
 
 		<nav>
-			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
+			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Login/Register</a>
 		</nav>
 	</header>
 	
@@ -23,7 +23,7 @@
 		We hope you find what you are looking for. Enjoy browsing at your leisure and sharing our site with your friends!
 	</p>
 
-	<section id=details>
+	<section id="details">
 		<div>
 			<h3>Contact</h3>
 			<p>
@@ -36,9 +36,23 @@
 				P.O. Box 1111<br>
 				New York, New York
 			</address>
-
 		<div>
 	
-		</div>
+		<div>
+	          <h3>Follow</h3>
+	          <p>
+	            <a href="#" target="_blank">Youtube</a><br>
+	            <a href="#" target="_blank">Facebook</a><br>
+	            <a href="#" target="_blank">Twitter</a>
+	          </p>
+	        </div>
+	</section>
+
+	<footer>
+		&copy: 2014 Gilt Bazaar. All Rights Reserved.
+	</footer>
+
+	 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
