--- a/bathroom-products.html
+++ b/bathroom-products.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	<title>BathRoom Products</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css"</link>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
@@ -13,6 +14,12 @@
 		<h1>For the BathRoom</h1>
 
 		<nav>
-			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
+			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Login/Register</a>
 		</nav>
 	</header>
+
+	 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+
+</body>
+</html>
