--- a/livingroom-products.html
+++ b/livingroom-products.html
@@ -14,7 +14,7 @@
 		<h1>For the Living Room</h1>
 
 		<nav>
-			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
+			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Login/Register</a>
 		</nav>
 	</header>
 
@@ -28,6 +28,10 @@
 
 		<img src="images/livingroomproducts/fishsculpture.jpg"
 		<figcaption>Badioli totem Murano glass sculpture"</figcaption>
-	</ul> 
+	</ul>
+
+	 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+     
 </body>
 </html>
