--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 	<h3>Login</h3>
 
 	<nav>
-		<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Contact</a>  <a href="login.html">Login/Register</a>
+		<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Login/Register</a>
 	</nav>
 
 <form action="*.php" method="post">
@@ -42,6 +42,9 @@
 
 	<input type="submit" value="submit">
 </form>
+
+ <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 	
 </body>
 </html>
