change index description

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 	</header>
 	
 	<p id="welcome"> 
-		<strong>Welcome to Gilt Bazaar<strong>, the premiere virtual shopping place for aesthetically appealing, unique yet functional pieces for your home.<br>
-		We are pleased to share with you this carefully selected classical but modern collection.  The display will change periodically since most items are available in very limited numbers. We aim to please by matching the collection with value for your money since we source directly from manufacturers. <br>
+		<strong>Welcome to Gilt Bazaar<strong>, the premiere virtual shopping place for highly aesthetic, unique yet functional pieces for your home.<br>
+		We are pleased to share with you this carefully selected modern but timeless collection. We aim to please you, our clients, by matching the items with value for money since we source directly from manufacturers. The display will change periodically since most items are available in very limited numbers.
+		<br>
 		We hope you find what you are looking for. Enjoy browsing at your leisure and sharing our site with your friends!
 	</p>
 
