--- a/livingroom-products.html
+++ b/livingroom-products.html
@@ -20,14 +20,17 @@
 
 	<section id="featured-livingroom">
 	<ul>
-		<img src="images/livingroomproducts/chandelier.jpg" 
-		<figcaption>Primavera 8 Lights Murano Glass Chandelier</figcaption>
+		<img src="images/livingroomproducts/chandelier.jpg" alt="chandelier">
+		<h4>Primavera 8 Lights Murano Glass Chandelier</h4> 
+		<figcaption>Source: www.murano-glass.com</figcaption>
 
-		<img sc="images/livingroomproducts/elephants.jpg" 
-		<figcaption>Venetian Murano Glass Elephants - Set of 2</figcaption>
+		<img src="images/livingroomproducts/elephants.jpg" alt="elephants">
+		<h4>Venetian Murano Glass Elephants - Set of 2</h4>
+		<figcaption>Source: www.murano-glass.com</figcaption>
 
-		<img src="images/livingroomproducts/fishsculpture.jpg"
-		<figcaption>Badioli totem Murano glass sculpture"</figcaption>
+		<img src="images/livingroomproducts/fishsculpture.jpg" alt="fish sculpture">
+		<h4>Badioli totem Murano glass sculpture</h4>
+		<figcaption>Source: www.murano-glass.com</figcaption>
 	</ul>
 
 	 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
