--- a/livingroom-products.html
+++ b/livingroom-products.html
@@ -7,11 +7,11 @@
 	<title>Living Room Products</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css"</link>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
-		<h1>For the Living Room</h1>
+		<h3>For the Living Room</h3>
 
 		<nav>
 			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Login/Register</a>
@@ -19,18 +19,25 @@
 	</header>
 
 	<section id="featured-livingroom">
+
 	<ul>
-		<img src="images/livingroomproducts/chandelier.jpg" alt="chandelier">
-		<h4>Primavera 8 Lights Murano Glass Chandelier</h4> 
-		<figcaption>Source: www.murano-glass.com</figcaption>
+		<figure>
+			<h4>Primavera 8 Lights Murano Glass Chandelier</h4> 
+			<img src="images/livingroomproducts/chandelier.jpg" alt="chandelier">
+			<figcaption>Source: www.murano-glass.com</figcaption>
+		</figure>
 
-		<img src="images/livingroomproducts/elephants.jpg" alt="elephants">
-		<h4>Venetian Murano Glass Elephants - Set of 2</h4>
-		<figcaption>Source: www.murano-glass.com</figcaption>
+		<figure>
+			<h4>Venetian Murano Glass Elephants - Set of 2</h4>
+			<img src="images/livingroomproducts/elephants.jpg" alt="elephants">
+			<figcaption>Source: www.murano-glass.com</figcaption>
+		</figure>
 
-		<img src="images/livingroomproducts/fishsculpture.jpg" alt="fish sculpture">
-		<h4>Badioli totem Murano glass sculpture</h4>
-		<figcaption>Source: www.murano-glass.com</figcaption>
+		<figure>
+			<h4>Badioli totem Murano glass sculpture</h4>
+			<img src="images/livingroomproducts/fishsculpture.jpg" alt="fish sculpture">
+			<figcaption>Source: www.murano-glass.com</figcaption>
+		</figure>
 	</ul>
 
 	 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
