--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 	<title>Gilt Bazaar Collection</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
-		<h1>Gilt Bazaar</h1>
+		
 
 		<nav>
 			<a href="index.html">About</a> <a href="bathroom-products.html">Bathroom</a> <a href="diningroom-products.html">Dining Room</a> <a href="kitchen-products.html">Kitchen</a> <a href="livingroom-products.html">Living Room</a> <a href="login.html">Login/Register</a>
 		</nav>
+
+		<h1>Gilt Bazaar</h1>
 	</header>
 	
 	<p id="welcome"> 
